@@ -1,3 +1,10 @@
+2001-07-30  Bradford Hovinen  <hovinen@ximian.com>
+
+	* capplet-util.c (capplet_init): Don't sync if we need legacy
+	values
+	(capplet_init): Call setup_session_mgmt if --apply or
+	--init-session-settings was passed
+
 2001-07-27  Bradford Hovinen  <hovinen@ximian.com>
 
 	* RELEASE : 1.5.2
